integration complete avec navigation 95%

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
             <artifactId>javafx-controls</artifactId>
             <version>22.0.2</version>
         </dependency>
+        <dependency>
+
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
+
 
 
     </dependencies>
