probleme d'affichage de map (l appel de html du map)

--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,19 @@
                 <artifactId>json</artifactId>
                 <version>20210307</version>
             </dependency>
+
         <dependency>
             <groupId>com.twilio.sdk</groupId>
             <artifactId>twilio</artifactId>
             <version>9.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>22</version>
+        </dependency>
+
 
 
 
