--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             </dependency>
 
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.twilio.sdk</groupId>
             <artifactId>twilio</artifactId>
             <version>9.0.0</version>
@@ -67,6 +73,19 @@
             <artifactId>javafx-web</artifactId>
             <version>22</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>0.18.0</version> <!-- Remplace avec la dernière version disponible -->
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version> <!-- Version stable actuelle -->
+        </dependency>
+
 
 
 
