--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
             <version>1.7.36</version> <!-- Version stable actuelle -->
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.3</version>
+        </dependency>
+
+
 
 
 
