--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,18 @@
             <version>1.4.7</version>
             <scope>compile</scope>
         </dependency>
+            <dependency>
+                <groupId>uk.co.caprica</groupId>
+                <artifactId>vlcj</artifactId>
+                <version>4.7.1</version>
+            </dependency>
+
+        <dependency>
+            <groupId>uk.co.caprica</groupId>
+            <artifactId>vlcj-javafx</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
 
 
 
