--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
  event_images_directory: '%kernel.project_dir%/public/assets/images'
  espace_images_directory: '%kernel.project_dir%/public/assets/images'
+ uploads_directory: '%kernel.project_dir%/public/uploads'
 
 services:
     # default configuration for services in *this* file
