--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,26 +3,22 @@
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
+# config/services.yaml
+
 parameters:
- event_images_directory: '%kernel.project_dir%/public/assets/images'
- espace_images_directory: '%kernel.project_dir%/public/assets/images'
- uploads_directory: '%kernel.project_dir%/public/uploads'
+    uploads_directory: '%kernel.project_dir%/public/uploads'
+    image_directory: '%kernel.project_dir%/public/uploads'  # ✅ Ajoute cette ligne
+    event_images_directory: '%kernel.project_dir%/public/assets/images'
+    espace_images_directory: '%kernel.project_dir%/public/assets/images'
 
 services:
-    # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autowire: true
+        autoconfigure: true
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    
     App\:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
