--- a/.env
+++ b/.env
@@ -37,7 +37,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=gmail://emailsender.lamma@gmail.com:rhqbqfckbugzsyhz@default
+#MAILER_DSN=gmail://emailsender.lamma@gmail.com:xvziyybvjekksscl@default
+MAILER_DSN="smtp://f59ad40e20a912:b739325dc8ac05@sandbox.smtp.mailtrap.io:2525"
 #MAILER_DSN=smtp://selim_hassani@hotmail.com:yabmnaohcywcmtde@smtp.office365.com:587?encryption=tls
 
 #MAILER_DSN="smtp://f59ad40e20a912:****ac05@sandbox.smtp.mailtrap.io:2525"
