--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "geocoder-php/nominatim-provider": "5.8",
         "php-http/guzzle7-adapter": "*",
         "phpdocumentor/reflection-docblock": "^5.6",
+        "phpoffice/phpspreadsheet": "^4.2",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
@@ -25,7 +26,7 @@
         "symfony/form": "6.4.*",
         "symfony/framework-bundle": "6.4.*",
         "symfony/google-mailer": "6.4.*",
-        "symfony/http-client": "6.4.*",
+        "symfony/http-client": "^7.2",
         "symfony/intl": "6.4.*",
         "symfony/mailer": "6.4.*",
         "symfony/mime": "6.4.*",
