--- a/.env
+++ b/.env
@@ -49,3 +49,10 @@ MAILER_DSN="smtp://f59ad40e20a912:b739325dc8ac05@sandbox.smtp.mailtrap.io:2525"
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
 
+###> symfony/octopush-notifier ###
+# OCTOPUSH_DSN=octopush://USERLOGIN:APIKEY@default?from=FROM&type=TYPE
+###< symfony/octopush-notifier ###
+
+###> symfony/vonage-notifier ###
+# VONAGE_DSN=vonage://KEY:SECRET@default?from=FROM
+###< symfony/vonage-notifier ###
