--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/mime": "6.4.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "6.4.*",
+        "symfony/octopush-notifier": "6.4",
         "symfony/process": "6.4.*",
         "symfony/property-access": "6.4.*",
         "symfony/property-info": "6.4.*",
@@ -45,11 +46,13 @@
         "symfony/twig-bundle": "6.4.*",
         "symfony/ux-turbo": "^2.23",
         "symfony/validator": "6.4.*",
+        "symfony/vonage-notifier": "6.4.*",
         "symfony/web-link": "6.4.*",
         "symfony/yaml": "6.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "twilio/sdk": "^8.5",
+        "vonage/client": "^4.1",
         "willdurand/geocoder": "4.6"
     },
     "config": {
