--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,23 +1,23 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 # config/services.yaml
-
 parameters:
     uploads_directory: '%kernel.project_dir%/public/uploads'
-    image_directory: '%kernel.project_dir%/public/uploads'  # ✅ Ajoute cette ligne
+    image_directory: '%kernel.project_dir%/public/uploads'
     event_images_directory: '%kernel.project_dir%/public/assets/images'
     espace_images_directory: '%kernel.project_dir%/public/assets/images'
-
+   
 services:
-
     _defaults:
         autowire: true
         autoconfigure: true
-        
-        
+
+    Vonage\Client:
+        arguments:
+            - '@Vonage\Client\Credentials\Basic'
+
+    Vonage\Client\Credentials\Basic:
+        arguments:
+            - '%env(VONAGE_API_KEY)%'
+            - '%env(VONAGE_API_SECRET)%'
 
     App\:
         resource: '../src/'
