integration avec user

--- a/.env
+++ b/.env
@@ -37,9 +37,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-#MAILER_DSN=gmail://emailsender.lamma@gmail.com:xvziyybvjekksscl@default
-MAILER_DSN="smtp://f59ad40e20a912:b739325dc8ac05@sandbox.smtp.mailtrap.io:2525"
-#MAILER_DSN=smtp://selim_hassani@hotmail.com:yabmnaohcywcmtde@smtp.office365.com:587?encryption=tls
+MAILER_DSN=smtp://lamma.eventgroups@gmail.com:etqqzoxjpzftvnap@smtp.gmail.com:587
+###< symfony/mailer ###
+
 
 #MAILER_DSN="smtp://f59ad40e20a912:****ac05@sandbox.smtp.mailtrap.io:2525"
 ###< symfony/mailer ###
@@ -48,10 +48,6 @@ MAILER_DSN="smtp://f59ad40e20a912:b739325dc8ac05@sandbox.smtp.mailtrap.io:2525"
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
-
-###> symfony/octopush-notifier ###
-# OCTOPUSH_DSN=octopush://USERLOGIN:APIKEY@default?from=FROM&type=TYPE
-###< symfony/octopush-notifier ###
 
 ###> symfony/vonage-notifier ###
 # VONAGE_DSN=vonage://KEY:SECRET@default?from=FROM
