--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
         "geocoder-php/nominatim-provider": "5.8",
-        "messagebird/php-rest-api": "^3.1",
         "php-http/guzzle7-adapter": "*",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpoffice/phpspreadsheet": "^4.2",
@@ -33,7 +32,6 @@
         "symfony/mime": "6.4.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "6.4.*",
-        "symfony/octopush-notifier": "6.4",
         "symfony/process": "6.4.*",
         "symfony/property-access": "6.4.*",
         "symfony/property-info": "6.4.*",
@@ -49,10 +47,11 @@
         "symfony/vonage-notifier": "6.4.*",
         "symfony/web-link": "6.4.*",
         "symfony/yaml": "6.4.*",
+        "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "twilio/sdk": "^8.5",
-        "vonage/client": "^4.1",
+        "twilio/sdk": "*",
+        "vonage/client": "*",
         "willdurand/geocoder": "4.6"
     },
     "config": {
