metier avanceé forget password with sms API twilio

--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=smtp://lamma.eventgroups@gmail.com:etqqzoxjpzftvnap@smtp.gmail.com:587
 ###< symfony/mailer ###
-
+CURL_CA_BUNDLE="C:/wamp64/bin/php/php8.2.18/extras/ssl/cacert.pem"
 
 #MAILER_DSN="smtp://f59ad40e20a912:****ac05@sandbox.smtp.mailtrap.io:2525"
 ###< symfony/mailer ###
