fournisseur knp pdf

--- a/.env
+++ b/.env
@@ -17,6 +17,9 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=176cc121453a024f6903284907f5ff31
+WKHTMLTOPDF_BINARY_PATH="C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe"
+
+WKHTMLTOIMAGE_BINARY_PATH="C:\Program Files\wkhtmltopdf\bin\wkhtmltoimage.exe"
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -24,7 +27,7 @@ APP_SECRET=176cc121453a024f6903284907f5ff31
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root@127.0.0.1:3306/lamma?serverVersion=mariadb-10.4.11"
+DATABASE_URL="mysql://root@127.0.0.1:3306/lamma2?serverVersion=mariadb-10.4.11"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
@@ -37,9 +40,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-#MAILER_DSN=gmail://emailsender.lamma@gmail.com:xvziyybvjekksscl@default
-MAILER_DSN="smtp://f59ad40e20a912:b739325dc8ac05@sandbox.smtp.mailtrap.io:2525"
-#MAILER_DSN=smtp://selim_hassani@hotmail.com:yabmnaohcywcmtde@smtp.office365.com:587?encryption=tls
+MAILER_DSN=smtp://lamma.eventgroups@gmail.com:etqqzoxjpzftvnap@smtp.gmail.com:587
+###< symfony/mailer ###
+
 
 #MAILER_DSN="smtp://f59ad40e20a912:****ac05@sandbox.smtp.mailtrap.io:2525"
 ###< symfony/mailer ###
@@ -48,3 +51,21 @@ MAILER_DSN="smtp://f59ad40e20a912:b739325dc8ac05@sandbox.smtp.mailtrap.io:2525"
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+
+###> symfony/vonage-notifier ###
+# VONAGE_DSN=vonage://KEY:SECRET@default?from=FROM
+###< symfony/vonage-notifier ###
+
+###> symfony/mercure-notifier ###
+# MERCURE_DSN=mercure://default
+###< symfony/mercure-notifier ###
+
+###> symfony/mercure-bundle ###
+# See https://symfony.com/doc/current/mercure.html#configuration
+# The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
+MERCURE_URL=https://example.com/.well-known/mercure
+# The public URL of the Mercure hub, used by the browser to connect
+MERCURE_PUBLIC_URL=https://example.com/.well-known/mercure
+# The secret used to sign the JWTs
+MERCURE_JWT_SECRET="!ChangeThisMercureHubJWTSecretKey!"
+###< symfony/mercure-bundle ###
