--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,14 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
         "geocoder-php/nominatim-provider": "5.8",
+        "knplabs/knp-snappy-bundle": "^1.10",
+        "php-flasher/flasher": "^1.15",
+        "php-flasher/flasher-symfony": "^1.15",
         "php-http/guzzle7-adapter": "*",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpoffice/phpspreadsheet": "^4.2",
         "phpstan/phpdoc-parser": "^2.1",
+        "stripe/stripe-php": "^17.1",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
         "symfony/console": "6.4.*",
@@ -38,16 +42,22 @@
         "symfony/runtime": "6.4.*",
         "symfony/security-bundle": "6.4.*",
         "symfony/serializer": "6.4.*",
-        "symfony/stimulus-bundle": "^2.23",
+        "symfony/stimulus-bundle": "^2.24",
         "symfony/string": "6.4.*",
         "symfony/translation": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
+        "symfony/ux-notify": "^2.24",
         "symfony/ux-turbo": "^2.23",
         "symfony/validator": "6.4.*",
+        "symfony/vonage-notifier": "6.4.*",
         "symfony/web-link": "6.4.*",
+        "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "6.4.*",
+        "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
+        "twilio/sdk": "*",
+        "vonage/client": "*",
         "willdurand/geocoder": "4.6"
     },
     "config": {
